--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background-color: #121212;
-      color: #f1f3f5;
+      background: linear-gradient(135deg, #f8f9fa, #e9ecef);
+      color: #343a40;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -19,20 +19,17 @@
       min-height: 100vh;
       padding: 2rem;
       text-align: center;
-      transition: background-color 0.5s, color 0.5s;
     }
 
     .logo {
-      width: 180px;
-      margin-bottom: 0.25rem;
+      max-width: 180px;
       animation: fadeIn 0.8s ease-out;
-      filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.15));
     }
 
     h1 {
       font-size: 2.5rem;
       margin-bottom: 0.5rem;
-      color: #ffffff;
+      color: #212529;
       animation: fadeIn 1s ease-out;
     }
 
@@ -40,7 +37,7 @@
       font-weight: 400;
       font-size: 1.25rem;
       margin-top: 0;
-      color: #ced4da;
+      color: #495057;
       animation: fadeIn 1.5s ease-out;
     }
 
@@ -48,7 +45,6 @@
       max-width: 600px;
       line-height: 1.6;
       font-size: 1rem;
-      color: #adb5bd;
       animation: fadeIn 2s ease-out;
     }
 
